// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField abut 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  border: solid 8px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    border: solid 4px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c2"
      />
    </div>
  </div>
</div>
`;

exports[`FormField abut with margin 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 8px;
  border: solid 8px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    border: solid 4px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c2"
      />
    </div>
  </div>
</div>
`;

exports[`FormField custom formfield 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 40px;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
    </div>
  </div>
</div>
`;

exports[`FormField default 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  padding: 7px;
  outline: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  font-weight: 400;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            autoComplete="off"
            className="c5"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField empty margin 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`FormField error 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #e35e59;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #e35e59;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
    <span
      className="c4"
    >
      test error
    </span>
  </div>
</div>
`;

exports[`FormField help 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin-inline-start: 4px;
  font-size: 12px;
  line-height: 16px;
  color: #65707d;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <span
      className="c2"
    >
      test help
    </span>
    <div
      className="c3"
    >
      <div
        className="c4"
      />
    </div>
  </div>
</div>
`;

exports[`FormField htmlFor 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`FormField info 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #666666;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
    <span
      className="c4"
    >
      test info
    </span>
  </div>
</div>
`;

exports[`FormField label 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="c2"
    >
      test label
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      />
    </div>
  </div>
</div>
`;

exports[`FormField margin 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 8px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`FormField pad 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 4px;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding: 4px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;
